test/conformance/chainsaw/namespaced-image-validating-policies/.chainsaw.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/configuration-chainsaw-v1alpha2.json
apiVersion: chainsaw.kyverno.io/v1alpha2
kind: Configuration
metadata:
  name: configuration
spec:
  discovery:
    fullName: true
  execution:
    failFast: true
    parallel: 2
  namespace:
    fastDelete: true
  timeouts:
    apply: 30s
